2002-05-01  Arati Dikey <aratid@kpit.com>

	* tc-sh.c (get_specific): Generate warning if the same
	destination register is used in parallel instructions.

2002-05-01  Andrew Macleod  <amacleod@cygnus.com>

	* config/tc-i386.c (extra_symbol_chars): Add '[' to the list.

2002-05-01  Alan Modra  <amodra@bigpond.net.au>

	* write.c (cvt_frag_to_fill): Set fr_offset to zero on .org
	backwards to prevent cascading errors.

2002-04-30  Mark Mitchell  <mark@codesourcery.com>

	* configure.in: Add support for powerpc-*-windiss.
	* configure: Regenerated.
	
2002-04-28  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-s390.c (md_parse_option): Formatting.

	* config/tc-i386.c: Formatting fixes, add missing space in error
	message.

2002-04-24  Christian Groessler <chris@groessler.org>

	* config/tc-z8k.c (build_bytes): Add support for new cases:
	CLASS_IGNORE and ARG_NIM4.
	(md_assemble): Prevent destruction of input_line_pointer if
	get_operands returns failure.

2002-04-24  Chris G. Demetriou  <cgd@broadcom.com>

	* config/tc-mips.c (macro_build): Do _not_ allow MIPS-3D
	instructions to be generated by macros.

2002-04-24  Andreas Schwab  <schwab@suse.de>

	* config/tc-i386.c (output_jump, output_disp)
	(md_estimate_size_before_relax): Don't set fx_pcrel_adjust any
	more.
	(md_apply_fix3): Remember addend value for rela relocations.
	(tc_gen_reloc): Correctly compute pc-relative relocation addend.

2002-04-22  Chris Demetriou  <cgd@broadcom.com>

	* config/tc-mips.c (macro_build): Add close-parenthesis missing
	from previous change.

2002-04-22  Eric Christopher  <echristo@redhat.com>

	* config/tc-mips.c (macro_build): Add warning if macro instructions
	are expanded into a branch delay slot.

2002-04-17  Geoffrey Keating  <geoffk@redhat.com>

	* dwarf2dbg.c (dwarf2_gen_line_info): Do emit duplicate line
	numbers, gdb relies on them to detect the start of the prologue.

2002-04-17  Martin Schwidefsky  <schwidefsky@de.ibm.com>
